compiler/plc_cfc/src/snapshots/plc_cfc__deserialize__labels.snap
---
source: compiler/plc_cfc/src/deserialize.rs
expression: visit(CONTENT_WITH_LABELS)
---
Ok(
    Pou {
        name: "program_0",
        pou_type: Program,
        body: Body {
            function_block_diagram: FunctionBlockDiagram {
                blocks: [
                    Block {
                        local_id: 1,
                        global_id: None,
                        type_name: "MyAdd",
                        instance_name: Some(
                            "local_add",
                        ),
                        execution_order_id: Some(
                            0,
                        ),
                        variables: [
                            BlockVariable {
                                kind: Input,
                                formal_parameter: "a",
                                negated: false,
                                ref_local_id: Some(
                                    2,
                                ),
                                edge: None,
                                storage: None,
                                enable: None,
                            },
                            BlockVariable {
                                kind: Input,
                                formal_parameter: "b",
                                negated: false,
                                ref_local_id: Some(
                                    3,
                                ),
                                edge: None,
                                storage: None,
                                enable: None,
                            },
                            BlockVariable {
                                kind: Output,
                                formal_parameter: "c",
                                negated: false,
                                ref_local_id: None,
                                edge: None,
                                storage: None,
                                enable: None,
                            },
                        ],
                    },
                ],
                variables: [
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 2,
                        negated: false,
                        expression: "local_a + 1",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 3,
                        negated: false,
                        expression: "local_b",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 12,
                        negated: false,
                        expression: "local_bool",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                    FunctionBlockVariable {
                        kind: Output,
                        local_id: 17,
                        negated: false,
                        expression: "local_c",
                        execution_order_id: Some(
                            5,
                        ),
                        ref_local_id: None,
                    },
                ],
                jumps: [
                    Jump {
                        kind: Jump,
                        name: Some(
                            "jumpy",
                        ),
                        local_id: 9,
                        global_id: None,
                        ref_local_id: Some(
                            12,
                        ),
                        execution_order_id: Some(
                            2,
                        ),
                        negated: false,
                    },
                    Jump {
                        kind: Label,
                        name: Some(
                            "jumpy",
                        ),
                        local_id: 10,
                        global_id: None,
                        ref_local_id: None,
                        execution_order_id: Some(
                            3,
                        ),
                        negated: false,
                    },
                    Jump {
                        kind: Return,
                        name: None,
                        local_id: 11,
                        global_id: None,
                        ref_local_id: Some(
                            15,
                        ),
                        execution_order_id: Some(
                            4,
                        ),
                        negated: false,
                    },
                ],
            },
            global_id: None,
        },
    },
)
